<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutTarea"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background=" #B9F6CA"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor=" #B9F6CA"
        app:cardCornerRadius="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTarea_Titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/alegreya_sans_bold"
                android:maxLength="50"
                android:textColor="#020202"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvTarea_tituloFecha"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Título de la tarea" />

            <TextView
                android:id="@+id/tvTarea_tituloFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/alegreya_sans_bold"
                android:text="@string/titulo_fecha"
                android:textColor="#020202"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textViewTarea_Fecha"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTarea_Titulo" />

            <TextView
                android:id="@+id/textViewTarea_Fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/alegreya_sans_bold"
                android:textColor="#020202"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/textViewTarea_Hora"
                app:layout_constraintStart_toEndOf="@+id/tvTarea_tituloFecha"
                app:layout_constraintTop_toBottomOf="@+id/textViewTarea_Titulo"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Fecha" />

            <TextView
                android:id="@+id/textViewTarea_Hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/alegreya_sans_bold"
                android:textColor="#020202"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvTarea_tituloHora"
                app:layout_constraintTop_toBottomOf="@+id/textViewTarea_Fecha"
                tools:text="Hora" />

            <TextView
                android:id="@+id/tvTarea_tituloHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/alegreya_sans_bold"
                android:text="@string/tituloTarea_hora"
                android:textColor="#020202"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewTarea_Hora"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTarea_tituloFecha" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="114dp"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/iconoTarea"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/picture" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>